@@ -1,3 +1,4 @@
+* js function HTMLSpecialChars() do not crash when the argument is not string
 * Fix Session:id() function
 * Improve loading of phplib - load only what is needed
 
